# welchost

./: .commitlintrc.yml  .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  homebrew-test.yml  pr-check.yml  release.yml
scripts/: export_logo.py
src/welchost/: cli.py  config.py  detect.py  generator.py  net.py  ornaments.py  render.py  telemetry.py  themes.py  update.py
src/welchost/templates/: welcome.zsh.j2  welcome_banner.py.j2
src/welchost/tui/: app.py  dev_watcher.py  fonts.py  logo.py  widgets.py
src/welchost/tui/screens/: main_menu.py  modals.py  step_color.py  step_confirm.py  step_decoration.py  step_text_font.py  theme_gallery.py  wizard.py
tests/: conftest.py  test_cli.py  test_config.py  test_detect.py  test_dev_mode.py  test_generator.py  test_telemetry.py  test_themes.py  test_tui_menu.py  test_update.py
