[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "welchost"
version = "1.0.1"
description = "Create and manage a Ghostty terminal welcome screen"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Welchost Contributors" }]
keywords = ["ghostty", "terminal", "welcome", "tui", "ascii-art", "figlet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "textual>=0.60",
    "pyfiglet>=1.0",
    "jinja2>=3.1",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "textual-dev>=0.60",
    "watchdog>=4.0",
    "commitizen>=3.29",
    "pre-commit>=3.8",
    "python-semantic-release>=9.14,<11",
    "ruff>=0.8",
    "build>=1.2",
    "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/scoobynko/welchost"
Repository = "https://github.com/scoobynko/welchost"
Issues = "https://github.com/scoobynko/welchost/issues"

[project.scripts]
welchost = "welchost.cli:app"


[tool.hatch.build.targets.wheel]
packages = ["src/welchost"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # Typer uses function calls in argument defaults

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/welchost/__init__.py:__version__"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
tag_format = "v{version}"

[tool.semantic_release.remote]
# Push the version bump over the plain (SSH) remote that actions/checkout
# configured from RELEASE_SSH_KEY, instead of an https://<GH_TOKEN>@github URL.
# The SSH deploy key is a bypass actor on the protected-main ruleset; the token
# (github-actions[bot]) is not, so token pushes are rejected with GH013.
ignore_token_for_push = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "chore", "docs", "test", "refactor", "perf", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "chore", "perf", "refactor"]
